<?xml version="1.0" encoding="utf-8"?>
<android.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_gravity="center_vertical"
        app:srcCompat="@drawable/ic_r_password"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="center_vertical"
        app:srcCompat="@drawable/ic_password"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="center_vertical"
        app:srcCompat="@drawable/ic_date"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="center_vertical"
        app:srcCompat="@drawable/ic_surname"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="center_vertical"
        app:srcCompat="@drawable/ic_name"
        tools:ignore="VectorDrawableCompat" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:ems="10"
        android:hint="@string/e_first_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:ems="10"
        android:hint="@string/e_last_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:ems="10"
        android:hint="@string/date_hint"
        android:inputType="date"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="100dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:ems="10"
        android:hint="@string/e_password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="156dp" />

    <EditText
        android:id="@+id/r_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:ems="10"
        android:hint="@string/e_r_password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="233dp" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="164dp"
        android:layout_height="63dp"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_up"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="508dp" />

</android.widget.GridLayout>